--- a/UnitTestProject/packages.config
+++ b/UnitTestProject/packages.config
@@ -3,6 +3,7 @@
   <package id="AngleSharp" version="0.13.0" targetFramework="net48" />
   <package id="log4net" version="2.0.8" targetFramework="net48" />
   <package id="NUnit" version="3.12.0" targetFramework="net48" />
+  <package id="NUnit.ConsoleRunner" version="3.10.0" targetFramework="net48" />
   <package id="NUnit3TestAdapter" version="3.16.0" targetFramework="net48" developmentDependency="true" />
   <package id="Selenium.Firefox.WebDriver" version="0.26.0" targetFramework="net48" />
   <package id="Selenium.RC" version="3.1.0" targetFramework="net48" />
